--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Research</h3>
-									<p> Research is a method to see what everyone has seen and discover the things that no one has thought of before. I've conducted 100+ hours of field research including interviews and surveys</p>
+									<p> Research is a method to see what everyone has seen and discover the things that no one has thought of before. I'm familiar with a variety of user research methods and tools</p>
 									
 								</div>
 							</div>
@@ -358,7 +358,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Coding</h3>
-									<p>To me, coding is not only a powerful tool but also a new perspective on the world. From back-end to front-end, I've learned Python, HTML/CSS, Bootstrap, PHP, Javascript and React.js. </p>
+									<p>To me, coding is not only a powerful tool but also a new perspective on the world. From back-end to front-end, I have experience in Python, HTML/CSS, Bootstrap, PHP, Javascript and React.js. </p>
 									
 								</div>
 							</div>
