--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							<div class="project" style="background-image: url(images/ut.png); margin-left: 7% ;width: 93%;">
 								<!--<a href="vote.html" target="blank">--><div class="desc">
 									<div class="con">
-										<h1>under construction</h1>
-										<span>UI/UX</span>
+										<h1>Uni Talk</h1>
+										<span>under construction</span>
 									</div>
 								</div>
 							</div>
