--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -379,20 +379,19 @@
 
 		<section class="pp wrapper">
 		<div class="animated wow fadeInDown">
-		<h2>Paper prototyping </h2>
-		<p>In order to discover potential breakdowns before hi-fi interface, I conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs. Here were part of points that I found: <br><br>
+		<h1>User Testing</h1>
+		<p>CConducting user testing is always the most direct way to validate my design and I conducted two rounds of user testing. <br><br>
 
-		•	"View recipes" button on Items page was confusing<br>
-		•	"Items" and "Shopping cart" on navigation bar were too similar to recognize <br>
-		•	Users expected a confirmation page after they check out<br>
-		•	No indicator on calendar to show if there is event on certain date...<br>
+        The first round was testing the task flow and information architecture with wireframes. In order to discover potential breakdown and deadlock before hi-fi prototypes, I conducted paper prototype testing with lo-fi wireframes, it helps users to focus on fundamental flow, information architecture and users' needs without distracting them by images, colors, etc. <br><br>
 
+        
+        The second round was testing the whole app with hi-fi clickable prototypes on Figma. By observing users perform each task while thinking out loud, I received direct feedback and thoughts about what's working for them, what isn’t. Users' opinions are very valuable to me.  In this way, I found specific ways to improve users' experience. 
 
-		<br>After revising over and over, I came out with the final interactive prototype as you saw above.
-
+        <br><br>After revising over and over, I came out with the final interactive prototype as you saw above.
+		</p>
 		</p>
 
-		<img src="work/img/IMG_1838.jpg">
+		<img src="work/img/testing.png">
 		</div>
 
 
