--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(images/Qeesi.png); margin-left:7% ;width: 93%;">
-							<a href="https://drive.google.com/file/d/1Id-Vw4HyPX87aj-0kCcqqAyWDaPA3zkJ/view?usp=sharingl" target="blank"><div class="desc">
+							<a href="https://www.figma.com/proto/lVwBeHZbwUTR3sp8zm5oUe/Qeesi-Presentation?node-id=0%3A2&viewport=-492%2C402%2C0.6103994846343994&scaling=min-zoom" target="blank"><div class="desc">
 									<div class="con">
 										<h1>Qeesi</h1>
 										<span>UI/UX</span>
