--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(work/img/qj_mockup.jpg); margin-left:-7% ;width: 107%;">
-							<a href="Q's_farmer.html" target="blank"><div class="desc">
+							<div class="project" style="background-image: url(images/petwin.png); margin-left:-7% ;width: 107%;">
+							<a href="https://medium.com/@ycchi/petwin-from-shelter-to-home-e2ee4c2fde09" target="blank"><div class="desc">
 									<div class="con">
-										<h1>Q's Farmer App</h1>
+										<h1>Petwin</h1>
 										<span>UI/UX</span>
 									</div>
 								</div>
@@ -233,10 +233,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/blushup.svg);">
-							<a href="blushup.html" target="blank"><div class="desc">
+							<div class="project" style="background-image: url(work/img/qj_mockup.jpg);">
+							<a href="Q's_farmer.html" target="blank"><div class="desc">
 									<div class="con">
-										<h1>Blushup</h1>
+										<h1>Q's Farmer App</h1>
 										<span>UI/UX</span>
 									</div>
 								</div>
@@ -246,10 +246,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/petwin.png); width: 102%;">
-							<a href="https://medium.com/@ycchi/petwin-from-shelter-to-home-e2ee4c2fde09" target="blank"><div class="desc">
+							<div class="project" style="background-image: url(images/blushup.svg); width: 102%;">
+							<a href="blushup.html" target="blank"><div class="desc">
 									<div class="con">
-										<h1>Petwin</h1>
+										<h1>Blushup</h1>
 										<span>UI/UX</span>
 									</div>
 								</div>
