--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -143,7 +143,7 @@
 		<span class="animated wow fadeInUp"> For small and medium-scale farmers, they have trouble maintaining their inventory due to several reasons. They also suffer from unnecessary losses because of the characteristics of fresh vegetable and fruit. Thus, farmers seek a new way to sell their items to customers, meet customer’s needs and also maintain the social connection at the same time. </span>
 
 		<h2 class="animated wow fadeInUp">Research Questions</h2>
-		<p class="animated wow fadeInUp">How to duplicate the experience of farmers market from real world to digtial world? <br> What are the main goal and pain point of farmer and customer?<br>What’s the specialty and unique of farmers market?</p>
+		<p class="animated wow fadeInUp">How to duplicate the experience of farmers market from real world to digtial world? <br> What are the main goal and pain point of farmer and customer?<br>What’s the specialty and uniqueness of farmers market?</p>
 
 	</section>
 </section>
