--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							<div class="project" style="background-image: url(images/img-4.jpg); margin-left:7% ;width: 93%;">
 								<a href="Collection.html" target="blank"><div class="desc">
 									<div class="con">
-										<h1>UI Design Collection</h1>
-										<span>Design</span>
+										<h1>Design Collection</h1>
+										<span>FUN!</span>
 									</div>
 								</div>
 							</div>
