--- a/Collection.html
+++ b/Collection.html
@@ -41,13 +41,16 @@
 	</section>
 
 	<section class="p1 wrapper">
-		<div class="animated wow fadeInDown">
+	
 		<h2> 01. 404 Error Page </h2>
 			<img id="error" src="work/img/404.png">
-		</div>
+	
 
-		<h2> 02. Blushup - How it works </h2>
+		<h2> 02. Blushup (a startup company I worked) - How it works </h2>
 			<img id="hiw" src="work/img/hiw.gif">
+
+		<h2> 03. UniTalk - A concept for dating app</h2>
+			<img id="UT"src="work/img/UniTalk.gif">
 
 	</section>
 	
