--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi All rights reserved. <br> Made with  <a href="https://colorlib.com" target="_blank">❤</a> </a></span></small></p>
 				<ul>
 					<li><a href="https://www.facebook.com/profile.php?id=100002158816472" target="blank"><i class="icon-facebook2"></i></a></li>
-					<li><a href="https://www.instagram.com/ericychi__/" target="blank"><i class="icon-instagram"></i></a></li>
+					<li><a href="https://www.instagram.com/ericychii/" target="blank"><i class="icon-instagram"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/ycchi/" target="blank"><i class="icon-linkedin2"></i></a></li>
 					<li><a href="https://dribbble.com/ycchi" target="blank"><i class="icon-dribbble2"></i></a></li>
 				</ul>
