--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -380,7 +380,7 @@
 		<section class="pp wrapper">
 		<div class="animated wow fadeInDown">
 		<h1>User Testing</h1>
-		<p>CConducting user testing is always the most direct way to validate my design and I conducted two rounds of user testing. <br><br>
+		<p>Conducting user testing is always the most direct way to validate my design and I conducted two rounds of user testing. <br><br>
 
         The first round was testing the task flow and information architecture with wireframes. In order to discover potential breakdown and deadlock before hi-fi prototypes, I conducted paper prototype testing with lo-fi wireframes, it helps users to focus on fundamental flow, information architecture and users' needs without distracting them by images, colors, etc. <br><br>
 
