--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/OB.png); width: 109%; ">
-							<a href="https://www.objectrocket.com/blog/beta/beta-elasticsearch-aws-announcement/" target="blank"><div class="desc">
+							<div class="project" style="background-image: url(images/Qeesi.png); width: 109%; ">
+							<a href="https://www.figma.com/proto/lVwBeHZbwUTR3sp8zm5oUe/Qeesi-Presentation?node-id=0%3A2&viewport=-492%2C402%2C0.6103994846343994&scaling=min-zoom" target="blank"><div class="desc">
 									<div class="con">
-										<h1>ObjectRocket - a rackspace company</h1>
-										<span>UX Intern</span>
+										<h1>QEESI</h1>
+										<span>UI/UX</span>
 									</div>
 								</div>
 							</div>
@@ -258,11 +258,11 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/Qeesi.png); margin-left:7% ;width: 93%;">
-							<a href="https://www.figma.com/proto/lVwBeHZbwUTR3sp8zm5oUe/Qeesi-Presentation?node-id=0%3A2&viewport=-492%2C402%2C0.6103994846343994&scaling=min-zoom" target="blank"><div class="desc">
+							<div class="project" style="background-image: url(images/OB.png); margin-left:7% ;width: 93%;">
+							<a href="https://www.objectrocket.com/blog/beta/beta-elasticsearch-aws-announcement/" target="blank"><div class="desc">
 									<div class="con">
-										<h1>Qeesi</h1>
-										<span>UI/UX</span>
+										<h1>ObjectRocket - a rackspace company</h1>
+										<span>UX Intern</span>
 									</div>
 								</div>
 							</div>
