--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -180,7 +180,7 @@
 
 	<section class="table wrapeper">
 			<div class="wow fadeInUp">
-			<h2>Comparative Analysis</h2>
+			<h2>Competitive Analysis</h2>
 			<p>To better understand current market and core values that users care, we analyzed six common methods for improving English expression skills. </p>
 
 			<img src="work/img/table.png">
