--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(work/img/qj_mockup.jpg);">
-							<a href="Q's_farmer.html" target="blank"><div class="desc">
+							<a href="#" target="blank"><div class="desc">
 									<div class="con">
 										<h1>Q's Farmer App</h1>
-										<span>UI/UX</span>
+										<span>updating</span>
 									</div>
 								</div>
 							</div>
