--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(work/img/qj_mockup.jpg);">
-							<a href="#" target="blank"><div class="desc">
+							<!-- <a href="#" target="blank">--><div class="desc"> 
 									<div class="con">
 										<h1>Q's Farmer App</h1>
 										<span>updating</span>
