--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -62,7 +62,7 @@
 			<li>
 				<a href="#section6" data-number="6">
 					<span class="cd-dot"></span>
-					<span class="cd-label">Wireframes & Prototypes</span>
+					<span class="cd-label">Wireframes</span>
 				</a>
 			</li>
 			<li>
@@ -354,7 +354,7 @@
 	<section id="section6" class="cd-section">
 	<section class="wp wrapper">
 		<div class="animated wow fadeInDown">
-		<h1>Wireframe and Prototype</h1>
+		<h1>Wireframe</h1>
 		<h2>How does it work?</h2>
 		<span>According to unpredictable supplements, I have orders start from pending status after customers placing their orders. The farm has to confirm that all of the items in the order are available and then click “confirm order” button to accept the order. I also designed a message section for customers and farmers to communicate directly and efficiently. </span>
 		</div>
