--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -169,10 +169,7 @@
 
 	<iframe style="margin-left: 40%;" width="30%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FUgjOza4x36hMCBFI9X9MJMkh%2FAdd-items-events%3Fnode-id%3D0%253A1%26viewport%3D-517%252C3%252C0.172938%26scaling%3Dscale-down" allowfullscreen></iframe>
 
-	<h2 class="animated wow fadeInDown">Game & Recipes</h2>
 
-	<img class="gr" src="work/img/game.svg">
-	<img class="gr" src="work/img/recipe.svg">
 
 
 </section>
@@ -309,10 +306,9 @@
 	
 		<h2>Five Main Functions</h2>
 		<div class="function-row">
-		<div class="function-img"><img src="work/img/qj-items.svg"></div><div class="function-text"><p>Farmers can add items for customers to buy in this section. It works based on calendar. For example, farmers can add a item for 10 days and customer can view and order it only in these days.</p></div></div>
+		<div class="function-img"><img src="work/img/qj-items.svg"></div><div class="function-text"><p>Farmers can add items & events and customers can buy products and items. It works based on calendar. For example, customers can select certain date to view the farmers' market or event.</p></div></div>
 
-		<div class="function-row">
-		<div class="function-img"><img src="work/img/qj-events.svg"></div><div class="function-text"><p>A section not only for users to reserve events and farmers to creat events but also serves as a platform to promo information between each side</p></div></div>
+	
 
 		<div class="function-row">
 		<div class="function-img"><img src="work/img/qj-game.svg"></div><div class="function-text"><p>A farming simulator motivates users check the app frequently. When users harvest something on the app, they can gain same product in real world from farmers. We add weather and other condition in the game to create empathy and connection to farmers</p></div></div>
