--- a/blushup.html
+++ b/blushup.html
@@ -64,7 +64,7 @@
 			</li>
 		</ul>
 
-		<a href="https://blushup.com/"><p>Visit Blushup.com</p></a>
+		<a href="https://blushup.com/" target="blank"><p>Visit Blushup.com</p></a>
 
 		<hr>
 
