--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -249,7 +249,7 @@
 
 		<section id="section4" class="evaluation wrapper cd-section">
 			<h2>Evaluation</h2>
-			<span>To evaluate our project and gain feedback, we conducted a pretest-posttest with 2 classes. The total sample number was 68. <br> According to the outcome, the correct rate of pronunciation increases the most (90.2%) and vocabulary comes in second place (80%). Moreover, the correct rate of grammar rises the least. We speculate that due to the complexity of grammar,  it is difficult to have obvious enhance in grammar skills. Last but not least, the correct rate of expression climbs up from 34% to 58.6%. Although long-term evaluation is still needed, we agree that So Cool English has the potential to become even better in the future. </span>
+			<span>To evaluate our project and gain feedback, we conducted a pretest-posttest with 2 classes. The total sample number was 68. According to the outcome, the correct rate of pronunciation increases the most (90.2%) and vocabulary comes in second place (80%). Moreover, the correct rate of grammar rises the least. We speculate that due to the complexity of grammar,  it is difficult to have obvious enhance in grammar skills. Last but not least, the correct rate of expression climbs up from 34% to 58.6%. Although long-term evaluation is still needed, we agree that So Cool English has the potential to become even better in the future. </span>
 			 <div id="chart_div" style="width: 100%; height: 500px; top: 3%;"></div>
 
 
@@ -277,7 +277,7 @@
 
 					<p>Icons from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
 			
-				<p>© All Copyrights reserved. <a href="index.html"> Eric Chi </a>2019</p>
+				<p>© All Copyrights reserved. <a href="index.html"> Eric Chi </a>2020</p>
 			</div>
 		
 			
