--- a/rackspace.html
+++ b/rackspace.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Blushup</title>
+	<title>Rackspace | Eric Chi's Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="author" content="Eric Chi">
-	<meta name="description" content="Blushup ui ux Eric chi designer "/>
-	<!-- <link rel="stylesheet" type="text/css" href="work/css/reset.css"> -->
+	<meta name="description" content="Rackspace ObjectRocket intern ui ux Eric chi designer "/>
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
-	<link rel="stylesheet" type="text/css" href="work/css/blushup.css">
+	<link rel="stylesheet" type="text/css" href="work/css/rackspace.css">
 	<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
     <script type="text/javascript" src="work/js/jquery.js"></script>
     <script type="text/javascript" src="work/js/fancybox.js"></script>
@@ -27,15 +26,15 @@
 </head>
 <body>
 
-	<section class="billboard dark">
-		<header class="wrapper dark">
+	<section class="billboard light">
+		<header class="wrapper light">
 			<a href="index.html"><img class="logo" src="work/img/eric.svg" alt=""/></a>
 			
 		</header>
 
-		<div class="caption dark clearfix focus-in-contract-bck">
-			<h1>Blushup</h1>
-			<p>UI/UX</p>
+		<div class="caption light clearfix focus-in-contract-bck">
+			<h1>New Database Platform of ObjectRocket - a rackpsace company</h1>
+			<p>UX Intern</p>
 			<hr>
 		</div>
 		
