--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -75,7 +75,7 @@
 	</nav>
 </div>
 	<section class="billboard dark">
-		<header class="wrapper dark">
+		<header>
 			<a href="index.html"><img class="logo" src="work/img/eric.svg"  alt=""/></a>
 			
 		</header>
