--- a/blushup.html
+++ b/blushup.html
@@ -28,7 +28,7 @@
 <body>
 
 	<section class="billboard dark">
-		<header class="wrapper dark">
+		<header>
 			<a href="index.html"><img class="logo" src="work/img/eric.svg" alt=""/></a>
 			
 		</header>
