--- a/rackspace.html
+++ b/rackspace.html
@@ -27,7 +27,7 @@
 <body>
 
 	<section class="billboard light">
-		<header class="wrapper light">
+		<header>
 			<a href="index.html"><img class="logo" src="work/img/eric.svg" alt=""/></a>
 			
 		</header>
