--- a/Collection.html
+++ b/Collection.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="author" content="Eric Chi">
-	<meta name="description" content="So Cool English Eric Chi"/>
+	<meta name="description" content="design ui ux visual Eric Chi"/>
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
 	<link rel="stylesheet" type="text/css" href="work/css/Collection.css">
