--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(work/img/mac.gif);">
-								<a href="SoCoolEng.html" target="blank"><div class="desc">
+								<a href="socooleng.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>So Cool English</h1>
 										<span>Product Design</span>
@@ -303,7 +303,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(images/img-4.jpg); margin-left:7% ;width: 93%;">
-								<a href="Collection.html" target="blank"><div class="desc">
+								<a href="collection.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>Design Collection</h1>
 										<span>FUN!</span>
