--- a/rackspace.html
+++ b/rackspace.html
@@ -7,7 +7,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="author" content="Eric Chi">
-	<meta name="description" content="Rackspace ObjectRocket intern ui ux Eric chi designer "/>
+	<meta name="description" content="ui ux intern Rackspace ObjectRocket design research designer Eric Chi"/>
+	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
 	<link rel="stylesheet" type="text/css" href="work/css/rackspace.css">
 	<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
@@ -18,8 +20,7 @@
     <script type="text/javascript" src="work/js/fancybox-thumbs.js"></script>
     <script type="text/javascript" src="work/js/wow.js"></script>
     <script type="text/javascript" src="work/js/main.js"></script>
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
-    <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>    
+    
 
 
 
@@ -33,46 +34,31 @@
 		</header>
 
 		<div class="caption light clearfix focus-in-contract-bck">
-			<h1>New Database Platform of ObjectRocket - a rackpsace company</h1>
+			<h1>ObjectRocket - New Database Platform</h1>
 			<p>UX Intern</p>
 			<hr>
 		</div>
 		
 	</section>
 
-	<section class="bg wrapper">
-		<h2>Overview</h2>
-		<div class="subtitle"><p>Blushup is a startup company in New York City and it offers a platform for customers to reserve in-store makeup online. As a UI/UX designer, I worked closely with the CEO and the CTO to redesign our new platform. However, due to NDA, I'm only able to show a quick review of my design. Please hit me up and I am more than happy to share details with you!</p></div>
-		
-		<ul class="clearfix">
-			<li>
-				
-				<h2>My Role</h2>
-				<p>UI/UX Designer</p>
-			</li>
-			<li>
-			
-				<h2>Skills</h2>
-				<p>	Wirframe/Prototype <br>
-					Figma <br>
-					Adobe PS/AI</p>
-			</li>
-			<li>
-				<h2>Company</h2>
-				<p>Blushup</p>
-			</li>
-		</ul>
-
-		<a href="https://blushup.com/" target="blank"><p>Visit Blushup.com</p></a>
-
-		<hr>
-
-		<h2>Redesign Preview</h2>
-		<iframe style="border: none; margin-left:20%; margin-top: 5%;" width="60%" height="700" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FfUFp6aKfgBbo7diZE7hfQF3T%2FBlushup-June-2019-Launch%3Fnode-id%3D2353%253A6%26viewport%3D445%252C469%252C0.2153937965631485%26scaling%3Dscale-down-width" allowfullscreen></iframe>
+	<section class="p1 wrapper">
 	
+		<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+  </div>
+</div>
 
 	</section>
-
+	
 
 	<footer>
 		<div class="wrapper">
@@ -86,6 +72,5 @@
 	</footer>
 	<!--  End footer  -->
     <script src='../ga.js'></script>
-
 </body>
 </html>
