--- a/rackspace.html
+++ b/rackspace.html
@@ -41,21 +41,12 @@
 		
 	</section>
 
-	<section class="p1 wrapper">
+	<section class="overview">
+
+	<h2>Overview</h2>
+	<p>test</p>
 	
-		<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-  </div>
-</div>
+		
 
 	</section>
 	
