--- a/rackspace.html
+++ b/rackspace.html
@@ -41,11 +41,53 @@
 		
 	</section>
 
-	<section class="overview">
+	<section class="main-content">
 
 	<h2>Overview</h2>
-	<p>test</p>
+	<p>In summer 2019, I did a three month internship at Rackspace. I worked as a UX intern with the UX team of ObjectRocket and I was responsible for evaluating and improving their new database platform which helped increase the satisfaction of users and bring new customers.</p>
 	
+	<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <p class="role">My Role</p>
+      <p>UX Intern</p>
+    </div>
+    <div class="col-md-4">
+      <p class="role">Timeline</p>
+      <p>May - August 2019
+    </div>
+    <div class="col-md-4">
+      <p class="role">Company</p>
+      <p>ObjectRocket - a rackspce comapny</p>
+    </div>
+  </div>
+</div>
+
+	<h2>Process</h2>
+	<p>test</p>
+
+	<div class="container">
+  <div class="row">
+    <div class="col-xs-2 col-md-2">
+      <img src="work/img/platform-audit.svg">
+    </div>
+    <div class="col-xs-2 col-md-2">
+      <img src="work/img/identify-gaps.svg">
+    </div>
+    <div class="col-xs-2 col-md-2">
+ 		<img src="work/img/conduct-user-testing.svg">
+    </div>
+     <div class="col-xs-2 col-md-2">
+ 		<img src="work/img/analyze-results.svg">
+    </div>
+     <div class="col-xs-2 col-md-2">
+ 		<img src="work/img/design-solutions.svg">
+    </div>
+     <div class="col-xs-2 col-md-2">
+ 		<img src="work/img/validate-reiterate.svg">
+    </div>
+  </div>
+</div>
 		
 
 	</section>
