--- a/rackspace.html
+++ b/rackspace.html
@@ -48,15 +48,15 @@
 	
 	<div class="container">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col">
       <p class="role">My Role</p>
       <p>UX Intern</p>
     </div>
-    <div class="col-md-4">
+    <div class="col">
       <p class="role">Timeline</p>
       <p>May - August 2019
     </div>
-    <div class="col-md-4">
+    <div class="col">
       <p class="role">Company</p>
       <p>ObjectRocket - a rackspce comapny</p>
     </div>
@@ -68,22 +68,22 @@
 
 	<div class="container">
   <div class="row">
-    <div class="col-xs-2 col-md-2">
+    <div class="col">
       <img src="work/img/platform-audit.svg">
     </div>
-    <div class="col-xs-2 col-md-2">
+    <div class="col">
       <img src="work/img/identify-gaps.svg">
     </div>
-    <div class="col-xs-2 col-md-2">
+    <div class="col">
  		<img src="work/img/conduct-user-testing.svg">
     </div>
-     <div class="col-xs-2 col-md-2">
+     <div class="col">
  		<img src="work/img/analyze-results.svg">
     </div>
-     <div class="col-xs-2 col-md-2">
+     <div class="col">
  		<img src="work/img/design-solutions.svg">
     </div>
-     <div class="col-xs-2 col-md-2">
+     <div class="col">
  		<img src="work/img/validate-reiterate.svg">
     </div>
   </div>
