--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(work/img/mac.gif);">
-								<a href="socooleng.html" target="blank"><div class="desc">
+								<a href="SoCoolEng.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>So Cool English</h1>
 										<span>Product Design</span>
