--- a/index.html
+++ b/index.html
@@ -218,10 +218,23 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</div>
 							</div>
 						</div></a>
+
+
+						<div class="row">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/OB.png); width: 109%;">
+							<a href="rackspace.html" target="blank"><div class="desc">
+									<div class="con">
+										<h1>ObjectRocket - a rackspace company</h1>
+										<span>UX Intern</span>
+									</div>
+								</div>
+							</div>
+						</div></a>
 					
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/Qeesi.png); width: 109%; ">
+							<div class="project" style="background-image: url(images/Qeesi.png);  ">
 							<a href="https://www.figma.com/proto/lVwBeHZbwUTR3sp8zm5oUe/Qeesi-Presentation?node-id=0%3A2&viewport=-492%2C402%2C0.6103994846343994&scaling=min-zoom" target="blank"><div class="desc">
 									<div class="con">
 										<h1>QEESI</h1>
@@ -233,7 +246,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(work/img/qj_mockup.jpg);">
+							<div class="project" style="background-image: url(work/img/qj_mockup.jpg); width: 102%;">
 							<!-- <a href="#" target="blank">--><div class="desc"> 
 									<div class="con">
 										<h1>Q's Farmer App</h1>
@@ -246,7 +259,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/blushup.svg); width: 102%;">
+							<div class="project" style="background-image: url(images/blushup.svg); margin-left:7% ;width: 93%;">
 							<a href="blushup.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>Blushup</h1>
@@ -256,17 +269,6 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							</div>
 						</div></a>
 
-						<div class="row">
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/OB.png); margin-left:7% ;width: 93%;">
-							<a href="https://www.objectrocket.com/blog/beta/beta-elasticsearch-aws-announcement/" target="blank"><div class="desc">
-									<div class="con">
-										<h1>ObjectRocket - a rackspace company</h1>
-										<span>UX Intern</span>
-									</div>
-								</div>
-							</div>
-						</div></a>
 
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(work/img/mac.gif);">
@@ -280,7 +282,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						</div></a>
 
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/parkking.png); margin-left: 7% ;width: 93%;">
+							<div class="project" style="background-image: url(images/parkking.png); margin-left:7% ;width: 93%;">
 								<a href="https://youtu.be/8EZuEmR3hVs" target="blank"><div class="desc">
 									<div class="con">
 										<h1>Parkking</h1>
@@ -302,7 +304,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						</div></a>
 						
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-4.jpg); margin-left:7% ;width: 93%;">
+							<div class="project" style="background-image: url(images/img-4.jpg); margin-left:7% ;width: 93%; ">
 								<a href="collection.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>Design Collection</h1>
