--- a/rackspace.html
+++ b/rackspace.html
@@ -46,7 +46,7 @@
 	<h2>Overview</h2>
 	<p>In summer 2019, I did a three month internship at Rackspace. I worked as a UX intern with the UX team of ObjectRocket and I was responsible for evaluating and improving their new database platform which helped increase the satisfaction of users and bring new customers.</p>
 	
-	<div class="container">
+	<div class="container text-center">
   <div class="row">
     <div class="col">
       <p class="role">My Role</p>
@@ -64,9 +64,10 @@
 </div>
 
 	<h2>Process</h2>
-	<p>test</p>
+	<p>The new database platform had several brand new features that we didn't have on previous ones such as fully managed metrics service, role-based access control, new datastores, etc. Thus, the process was all about finding and applying data that can improve the platform.</p>
+	<br><br>
 
-	<div class="container">
+	<div class="container text-center">
   <div class="row">
     <div class="col">
       <img src="work/img/platform-audit.svg">
@@ -88,7 +89,33 @@
     </div>
   </div>
 </div>
-		
+
+	<h2>Accomplishments</h2>	
+	<ol>
+		<li><p>1. Performed an audit on both new and old platforms to identify problems.</p></li>
+		<li><p>2. Analyzed current user flows and past customer's support tickets to uncover potential gapsbetween user's expectations and the design. </p></li>
+		<li><p>3. Created a user testing plan according to the previous findings.</p></li>
+		<li><p>4. Conducted the user tests with 8 real customers and analyzed the results.</p></li>
+		<li><p>5. Designed solutions based on the insights from user testings and the business's goals of the corporation.</p></li>
+		<li><p>6. Increased satisfaction of users by 40%.</p></li>
+	</ol>
+
+	<h2>Takeaways & Lessons</h2>
+
+	<ul>
+		<li><div class="title">Justify design decision</div>
+		<p>There are rationales behind every design. The ability to compare and justify design decisions is an essential skill for a designer.</p></li>
+		<li><div class="title">Define gaps and move forward under ambiguity</div>
+		<p>Not every problem will be well-defined so a designer has to zoom in and out during the process to ensure the design is on the right track.</p></li>
+		<li><div class="title">Coordinate goals of business and users</div>
+		<p>Sometimes there are conflicts between a business' and users' goals and reaching out to feedbacks and thoughts is always the best way to solve the conflicts.</p></li>
+		<li><div class="title">Appreciation and gratitude make the world better</div>
+		<p>One thing I learned about ObjectRocket is that people are generous about express appreciation and gratitude and it makes everyone supportive and cooperative.</p></li>
+	</ul>
+
+	<div class="text-center">
+	<img width="50%" src="work/img/eric-or.jpg" class="img-fluid rounded" alt=" ">
+	</div>
 
 	</section>
 	
