update rackspace + qeesi

--- a/qeesi.html
+++ b/qeesi.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Rackspace | Eric Chi's Portfolio</title>
+	<title>Qeesi | Eric Chi's Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="author" content="Eric Chi">
-	<meta name="description" content="ui ux intern Rackspace ObjectRocket design research designer Eric Chi"/>
+	<meta name="description" content="ui ux Qeesi redesign design research designer Eric Chi"/>
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
-	<link rel="stylesheet" type="text/css" href="work/css/rackspace.css">
+	<link rel="stylesheet" type="text/css" href="work/css/qeesi.css">
 	<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
     <script type="text/javascript" src="work/js/jquery.js"></script>
     <script type="text/javascript" src="work/js/fancybox.js"></script>
@@ -27,13 +27,13 @@
 </head>
 <body>
 
-	<section class="billboard light">
+	<section class="billboard dark">
 		<header>
 			<a href="index.html"><img class="logo" src="work/img/eric.svg" alt=""/></a>
 			
 		</header>
 
-		<div class="caption light clearfix focus-in-contract-bck">
+		<div class="caption dark clearfix focus-in-contract-bck">
 			<h1>ObjectRocket - New Database Platform</h1>
 			<p>UX Intern</p>
 			<hr>
@@ -103,13 +103,13 @@
 	<h2>Takeaways & Lessons</h2>
 
 	<ul>
-		<li><div class="title">• Justify design decision</div>
+		<li><div class="title">Justify design decision</div>
 		<p>There are rationales behind every design. The ability to compare and justify design decisions is an essential skill for a designer.</p></li>
-		<li><div class="title">• Define gaps and move forward under ambiguity</div>
+		<li><div class="title">Define gaps and move forward under ambiguity</div>
 		<p>Not every problem will be well-defined so a designer has to zoom in and out during the process to ensure the design is on the right track.</p></li>
-		<li><div class="title">• Coordinate goals of business and users</div>
+		<li><div class="title">Coordinate goals of business and users</div>
 		<p>Sometimes there are conflicts between a business' and users' goals and reaching out to feedbacks and thoughts is always the best way to solve the conflicts.</p></li>
-		<li><div class="title">• Appreciation and gratitude make the world better</div>
+		<li><div class="title">Appreciation and gratitude make the world better</div>
 		<p>One thing I learned about ObjectRocket is that people are generous about express appreciation and gratitude and it makes everyone supportive and cooperative.</p></li>
 	</ul>
 
