--- a/qeesi.html
+++ b/qeesi.html
@@ -34,8 +34,8 @@
 		</header>
 
 		<div class="caption dark clearfix focus-in-contract-bck">
-			<h1>ObjectRocket - New Database Platform</h1>
-			<p>UX Intern</p>
+			<h1>Qeesi</h1>
+			<p>UI/UX</p>
 			<hr>
 		</div>
 		
@@ -63,59 +63,9 @@
   </div>
 </div>
 
-	<h2>Process</h2>
-	<p>The new database platform had several brand new features that we didn't have on previous ones such as fully managed metrics service, role-based access control, new datastores, etc. Thus, the process was all about finding and applying data that can improve the platform.</p>
-	<br><br>
-
-	<div class="container text-center">
-  <div class="row">
-    <div class="col">
-      <img src="work/img/platform-audit.svg">
-    </div>
-    <div class="col">
-      <img src="work/img/identify-gaps.svg">
-    </div>
-    <div class="col">
- 		<img src="work/img/conduct-user-testing.svg">
-    </div>
-     <div class="col">
- 		<img src="work/img/analyze-results.svg">
-    </div>
-     <div class="col">
- 		<img src="work/img/design-solutions.svg">
-    </div>
-     <div class="col">
- 		<img src="work/img/validate-reiterate.svg">
-    </div>
-  </div>
+	
+	<iframe style="border: none;" width="80%" height="600px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FlVwBeHZbwUTR3sp8zm5oUe%2FQeesi-Presentation%3Fnode-id%3D0%253A2%26viewport%3D314%252C332%252C0.09858471900224686%26scaling%3Dscale-down" allowfullscreen></iframe>
 </div>
-
-	<h2>Accomplishments</h2>	
-	<ol>
-		<li><p>1. Performed an audit on both new and old platforms to identify problems.</p></li>
-		<li><p>2. Analyzed current user flows and past customer's support tickets to uncover potential gapsbetween user's expectations and the design. </p></li>
-		<li><p>3. Created a user testing plan according to the previous findings.</p></li>
-		<li><p>4. Conducted the user tests with 8 real customers and analyzed the results.</p></li>
-		<li><p>5. Designed solutions based on the insights from user testings and the business's goals of the corporation.</p></li>
-		<li><p>6. Increased satisfaction of users by 40%.</p></li>
-	</ol>
-
-	<h2>Takeaways & Lessons</h2>
-
-	<ul>
-		<li><div class="title">Justify design decision</div>
-		<p>There are rationales behind every design. The ability to compare and justify design decisions is an essential skill for a designer.</p></li>
-		<li><div class="title">Define gaps and move forward under ambiguity</div>
-		<p>Not every problem will be well-defined so a designer has to zoom in and out during the process to ensure the design is on the right track.</p></li>
-		<li><div class="title">Coordinate goals of business and users</div>
-		<p>Sometimes there are conflicts between a business' and users' goals and reaching out to feedbacks and thoughts is always the best way to solve the conflicts.</p></li>
-		<li><div class="title">Appreciation and gratitude make the world better</div>
-		<p>One thing I learned about ObjectRocket is that people are generous about express appreciation and gratitude and it makes everyone supportive and cooperative.</p></li>
-	</ul>
-
-	<div class="text-center">
-	<img width="50%" src="work/img/eric-or.jpg" class="img-fluid rounded" alt=" ">
-	</div>
 
 	</section>
 	
