--- a/rackspace.html
+++ b/rackspace.html
@@ -58,7 +58,7 @@
     </div>
     <div class="col">
       <p class="role">Company</p>
-      <p>ObjectRocket - a rackspce comapny</p>
+      <p>ObjectRocket/Rackspace</p>
     </div>
   </div>
 </div>
