--- a/qeesi.html
+++ b/qeesi.html
@@ -44,27 +44,30 @@
 	<section class="main-content">
 
 	<h2>Overview</h2>
-	<p>In summer 2019, I did a three month internship at Rackspace. I worked as a UX intern with the UX team of ObjectRocket and I was responsible for evaluating and improving their new database platform which helped increase the satisfaction of users and bring new customers.</p>
+	<p>Qeesi is a questionnaire that helps patients to identify multiple chemical intolerances and it used to be paper-based. Through time, the Qeesi team migrated it from paper to website. Now, the Qeesi team is looking for a redesign to improve the online version of Qeesi.</p>
 	
 	<div class="container text-center">
   <div class="row">
     <div class="col">
       <p class="role">My Role</p>
-      <p>UX Intern</p>
+      <p>UI/UX Designer<br>User Researcher<br>Visual Designer</p>
     </div>
     <div class="col">
       <p class="role">Timeline</p>
-      <p>May - August 2019
+      <p>January - May 2019
     </div>
     <div class="col">
       <p class="role">Company</p>
-      <p>ObjectRocket - a rackspce comapny</p>
+      <p>UT Health Science Center at San Antonio  </p>
     </div>
   </div>
 </div>
 
-	
-	<iframe style="border: none;" width="80%" height="600px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FlVwBeHZbwUTR3sp8zm5oUe%2FQeesi-Presentation%3Fnode-id%3D0%253A2%26viewport%3D314%252C332%252C0.09858471900224686%26scaling%3Dscale-down" allowfullscreen></iframe>
+	<h2>Process & Outcome</h2>
+
+<div style="margin-left:10%;">
+
+	<iframe style="border: none;" width="90%" height="800px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FlVwBeHZbwUTR3sp8zm5oUe%2FQeesi-Presentation%3Fnode-id%3D0%253A2%26viewport%3D314%252C332%252C0.09858471900224686%26scaling%3Dcontain" allowfullscreen></iframe>
 </div>
 
 	</section>
