--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/Qeesi.png);  ">
-							<a href="https://www.figma.com/proto/lVwBeHZbwUTR3sp8zm5oUe/Qeesi-Presentation?node-id=0%3A2&viewport=-492%2C402%2C0.6103994846343994&scaling=min-zoom" target="blank"><div class="desc">
+							<a href="qeesi.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>QEESI</h1>
 										<span>UI/UX</span>
