--- a/index.html
+++ b/index.html
@@ -292,20 +292,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							</div>
 						</div>
 
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(work/img/vote.png); ">
-								<a href="vote.html" target="blank"><div class="desc">
-									<div class="con">
-										<h1>#Vote</h1>
-										<span>Front-End Development</span>
-									</div>
-								</div>
-							</div>
-						</div></a>
 						
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-4.jpg); margin-left:7% ;width: 93%; ">
-								<a href="collection.html" target="blank"><div class="desc">
+							<div class="project" style="background-image: url(images/img-4.jpg); ">
+								<a href="Collection.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>Design Collection</h1>
 										<span>FUN!</span>
