--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -150,7 +150,7 @@
 	<section id="section2" class="cd-section">
 	<section class="challenge wrapper">
 		<div class="animated wow fadeInUp">
-			<h2> Challenge </h2>
+			<h2> Challenges </h2>
 				<p>English education in Asia focuses on reading and listening more than speaking and writing. High school students usually are capable of understanding English vocabulary and sentence but unable to express articulately or compose a sentence in English. After surveying 68 students first-grade high school students, we concluded the primary challenges of improving speaking and writing skills in English for students. </p>
 		</div>
 
@@ -190,7 +190,7 @@
 
 
 	<section class="value wrapper">
-		<h2 class="animated wow fadeInUp">User's Core Value</h2>
+		<h2 class="animated wow fadeInUp">User's Core Values</h2>
 			<span class="animated wow fadeInUp">Deprived from survey, interview and comparative analysis, I determind three core value that user care the most. </span>
 
 
