--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -74,13 +74,13 @@
 		</ul>
 	</nav>
 </div>
-	<section class="billboard dark">
+	<section class="billboard light">
 		<header>
 			<a href="index.html"><img class="logo" src="work/img/eric.svg"  alt=""/></a>
 			
 		</header>
 
-		<div class="caption dark clearfix focus-in-contract-bck">
+		<div class="caption light clearfix focus-in-contract-bck">
 			<h1>Q's Farmer App</h1>
 			<p>UI/UX</p>
 			<hr>
