--- a/blushup.html
+++ b/blushup.html
@@ -27,13 +27,13 @@
 </head>
 <body>
 
-	<section class="billboard dark">
+	<section class="billboard light">
 		<header>
-			<a href="index.html"><img class="logo" src="work/img/eric.svg" alt=""/></a>
+			<a href="index.html"><img class="logo" src="images/eric-white.svg" alt=""/></a>
 			
 		</header>
 
-		<div class="caption dark clearfix focus-in-contract-bck">
+		<div class="caption light clearfix focus-in-contract-bck">
 			<h1>Blushup</h1>
 			<p>UI/UX</p>
 			<hr>
