--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<i class="icon-location-arrow"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>Austin, Texas</p>
+									<p>New York, NY</p>
 								</div>
 							</div>
 
