delete footer & add anchor

--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -76,7 +76,7 @@
 </div>
 	<section class="billboard light">
 		<header>
-			<a href="index.html"><img class="logo" src="work/img/eric.svg"  alt=""/></a>
+			<a href="index.html"><img class="logo" src="images/eric-white.svg"  alt=""/></a>
 			
 		</header>
 
