--- a/vote.html
+++ b/vote.html
@@ -35,8 +35,8 @@
 			<p>Front-End Development</p>
 			</div>
 
-			<a href="demo.html" class="boton">
-			View Demo 
+			<a href="index.html#work" class="boton">
+			back to work
 			</a>
 			
 		</div>
@@ -46,8 +46,12 @@
 	<section class="overview">
 		<div class="animated wow fadeInDown">
 		<h2> Overview </h2>
-		<p>#Vote is a website that shows the sum of time and fee that voters have spent and distance that they have traveled. Voting is a significant way to show our love and care about our home. We hope through the statistics of voters, we can inspire more and more people to participate election and vote. Each vote is indispensable and it can lead us to a bright tomorrow.  </p>
+		<p>#Vote is a website that shows the sum of time and fee that voters have spent and distance that they have traveled. Voting is a significant way to show our love and care about our home. We hope through the statistics of voters, we can inspire more and more people to participate election and vote. Each vote is indispensable and it can lead us to a bright tomorrow. > </p>
+
+
 	</div>
+
+
 
 	</section>
 
@@ -78,15 +82,7 @@
 
 
 
-	<footer>
-		<div class="wrapper">
-			<div class="rights">
-			
-				<p>© All Copyrights reserved. <a href="index.html"> Eric Chi </a>2020</p>
-			</div>
-		</div>		
-	</footer>
-	<!--  End footer  -->
+	
   
 
   <script type="text/javascript">
