--- a/Collection.html
+++ b/Collection.html
@@ -28,7 +28,7 @@
 
 	<section class="billboard dark">
 		<header>
-			<a href="index.html"><img class="logo" src="work/img/eric.svg" alt=""/></a>
+			<a href="index.html#work"><img class="logo" src="work/img/eric.svg" alt=""/></a>
 			
 		</header>
 
@@ -55,17 +55,7 @@
 	</section>
 	
 
-	<footer>
-		<div class="wrapper">
-			<div class="rights">
-			
-				<p>© All Copyrights reserved. <a href="index.html"> Eric Chi </a>2020</p>
-			</div>
-
-			
-		</div>		
-	</footer>
-	<!--  End footer  -->
+	
     <script src='../ga.js'></script>
 </body>
 </html>
