--- a/blushup.html
+++ b/blushup.html
@@ -29,7 +29,7 @@
 
 	<section class="billboard light">
 		<header>
-			<a href="index.html"><img class="logo" src="images/eric-white.svg" alt=""/></a>
+			<a href="index.html#work"><img class="logo" src="images/eric-white.svg" alt=""/></a>
 			
 		</header>
 
@@ -77,17 +77,7 @@
 	</section>
 
 
-	<footer>
-		<div class="wrapper">
-			<div class="rights">
-			
-				<p>© All Copyrights reserved. <a href="index.html"> Eric Chi </a>2020</p>
-			</div>
-
-			
-		</div>		
-	</footer>
-	<!--  End footer  -->
+	
     <script src='../ga.js'></script>
 
 </body>
