--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 				</div>
 			</section>
 
-				<section class="colorlib-work" data-section="work">
+				<section class="colorlib-work" data-section="work"><a id="work"></a>
 							<div class="colorlib-narrow-content">
 								<div class="row">
 									<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
